--- a/page1.html
+++ b/page1.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Wild Circus</title>
+	<title>Page 2</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-
-<a href="page1.html">go to page 1</a> 
+<a href="index.html">go to index </a>
 	<header>
 		<div class="wrap">
 			<div class="headline">
 				<h1>
-				 Bienvenue sur mon site! ^^ 
+				 Protagoniste 1
 				</h1>
 			</div>
-			<div><img src="img/large.jpg"></div>
+			<div><img src="img/large2.jpg"></div>
 		</div>
 	</header>
 
