--- a/dates.html
+++ b/dates.html
@@ -17,26 +17,24 @@
 		<link rel="shortcut icon" href="img/fav.ico" />
 		<!-- end: Fav and touch icons -->
 	</head>
-	<!-- end: HEAD -->
+<!-- end: HEAD -->
 	<body>
-		<header>
-			<!-- Nav -->
-			<nav id="nav"><ul>
-				<li class="current"><a href="index.html">Program of the Wild Circus</a></li>
-				<li><a href="performances.html">Performances</a><ul>
-					<li><a href="#">Jojo and his animals </a></li>
-					<li><a href="#">Manu the clown</a></li>
-					<li><a href="#">The trapezists</a></li>
-					<li><a href="#">Our two jugglers</a></li>
-				</ul></li>
-				<li><a href="dates.html">Dates and tours</a></li>
-				<li><a href="prices.html">Prices and booking</a></li>
-			</ul></nav>
-			<!-- end: nav -->
-		</header>
+		<!-- Nav -->
+		<nav id="nav"><ul>
+			<li><a href="index.html">Program of the Wild Circus</a></li>
+			<li><a href="performances.html">Performances</a><ul>
+				<li><a href="#">Jojo and his animals </a></li>
+				<li><a href="#">Manu the clown</a></li>
+				<li><a href="#">The trapezists</a></li>
+				<li><a href="#">Our two jugglers</a></li>
+			</ul></li>
+			<li class="current"><a href="dates.html">Dates and tours</a></li>
+			<li><a href="prices.html">Prices and booking</a></li>
+		</ul></nav>
+		<!-- end: nav -->
 		<div class="content-wrap">
 			<img src="img/large.jpg">
-			<p>Bienvenue sur le site du Wild Circus!</p>
+			<p>Dates and tours</p>
 		</div>
 		<footer>
 			&copy; Copyright Wild Circus. All rights reserved.
