--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<!-- end: HEAD -->
 	<body>
 		<header>
+		   <img class="banniere2" src="img/banniere2.jpg">
 			<!-- Nav -->
 			<nav id="nav"><ul>
 				<li class="current"><a href="index.html">Program of the Wild Circus</a></li>
