--- a/dates.html
+++ b/dates.html
@@ -19,18 +19,21 @@
 	</head>
 <!-- end: HEAD -->
 	<body>
-		<!-- Nav -->
-		<nav id="nav"><ul>
-			<li><a href="index.html">Program of the Wild Circus</a></li>
-			<li><a href="performances.html">Performances</a><ul>
-				<li><a href="#">Jojo and his animals </a></li>
-				<li><a href="#">Manu the clown</a></li>
-				<li><a href="#">The trapezists</a></li>
-				<li><a href="#">Our two jugglers</a></li>
-			</ul></li>
-			<li class="current"><a href="dates.html">Dates and tours</a></li>
-			<li><a href="prices.html">Prices and booking</a></li>
-		</ul></nav>
+		<header>
+		 <img class="banniere2" src="img/banniere2.jpg">
+			<!-- Nav -->
+			<nav id="nav"><ul>
+				<li><a href="index.html">Program of the Wild Circus</a></li>
+				<li><a href="performances.html">Performances</a><ul>
+					<li><a href="#">Jojo and his animals </a></li>
+					<li><a href="#">Manu the clown</a></li>
+					<li><a href="#">The trapezists</a></li>
+					<li><a href="#">Our two jugglers</a></li>
+				</ul></li>
+				<li class="current"><a href="dates.html">Dates and tours</a></li>
+				<li><a href="prices.html">Prices and booking</a></li>
+			</ul></nav>
+		</header>
 		<!-- end: nav -->
 		<div class="content-wrap">
 			<img src="img/large.jpg">
