--- a/dates.html
+++ b/dates.html
@@ -22,17 +22,12 @@
 		<header>
 		 <img class="banniere2" src="img/banniere2.jpg">
 			<!-- Nav -->
-			<nav id="nav"><ul>
-				<li><a href="index.html">Program of the Wild Circus</a></li>
-				<li><a href="performances.html">Performances</a><ul>
-					<li><a href="#">Jojo and his animals </a></li>
-					<li><a href="#">Manu the clown</a></li>
-					<li><a href="#">The trapezists</a></li>
-					<li><a href="#">Our two jugglers</a></li>
-				</ul></li>
-				<li class="current"><a href="dates.html">Dates and tours</a></li>
-				<li><a href="prices.html">Prices and booking</a></li>
-			</ul></nav>
+			<nav class="nav">
+				<a id="program" href="index.html"></a>
+				<a id="performances" href="performances.html"></a>
+				<a id="dates" href="dates.html"></a>
+				<a id="prices" href="prices.html"></a>
+			</nav>
 		</header>
 		<!-- end: nav -->
 		<div class="content-wrap">
