--- a/dates.html
+++ b/dates.html
@@ -30,10 +30,32 @@
 			</nav>
 		</header>
 		<!-- end: nav -->
-		<div class="content-wrap">
-			<img src="img/large.jpg">
-			<p>Dates and tours</p>
-		</div>
+		
+		
+		<section>
+
+<div id="article">
+
+<img id="elephant" src="img/elephant.png" alt="elephant"/> 
+
+<h1 style="text-align: center;"><span style="font-family: 'arial black', 'avant garde'; color: #339966;"><em>DATES - Wild Circus</em></span></h1>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #16432c; font-size: small;">Upcoming performance :</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #16432c; font-size: small;"><strong>06/12/2016</strong> - Paris, France</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #16432c; font-size: small;"><strong>08/08/2016</strong> - New-York, United-States</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #16432c; font-size: small;"><strong> 04/07/2016 </strong>- London, United Kingdom</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #16432c; font-size: small;"><strong>18/03/2016</strong> - Milan, Italia</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #16432c; font-size: small;"><strong>23/01/2016</strong> - Berlin, Germany</span></p>
+<p style="text-align: center;">&nbsp;</p>
+
+</div>
+
+
+</section>
+
+
+
+		
+			
 		<footer>
 			&copy; Copyright Wild Circus. All rights reserved.
 		</footer>
