--- a/prices.html
+++ b/prices.html
@@ -31,9 +31,24 @@
 			</nav>
 		</header>
 		<!-- end: nav -->
-		<div class="content-wrap">
-			<img src="img/large.jpg">
-			<p>Prices and booking</p>
+		<div id="content">
+		
+		<h1 style="text-align: center;"><span style="font-weight: normal;"><span style="font-family: 'arial black', 'avant garde'; color: #339966;"><span style="text-decoration: underline;">Prices</span>&nbsp;</span></span></h1>
+<p><span style="color: #339966;"><br /></span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Children under 8 : Free&nbsp;</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Entrance for adult : 12 &euro;</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Teenagers from 8 to 13 &nbsp;: 7 &euro;</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Seniors : 10 &euro;</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Ticket for a group of 10 persons : 90 &euro;</span></p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Prices are lowest on sundays&nbsp;</span></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;"><strong><a href="mailto:mailto:booking@wildcircus.com">
+Contact here in order to book and have precisions</a> </strong></span></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+
+			
 		</div>
 		<footer>
 			&copy; Copyright Wild Circus. All rights reserved.
