--- a/trapez.html
+++ b/trapez.html
@@ -17,9 +17,11 @@
 		<link rel="shortcut icon" href="img/fav.ico" />
 		<!-- end: Fav and touch icons -->
 	</head>
-<!-- end: HEAD -->
+	<!-- end: HEAD -->
+	
 	<body>
-	<header>
+	
+		<header>
 		
 		   <img class="banniere2" src="img/banniere2.jpg">
 			<!-- Nav -->
@@ -30,33 +32,21 @@
 				<a id="prices" href="prices.html"></a>
 			</nav>
 		</header>
-		<!-- end: nav -->
-	
-	
-	<section>
+			<!-- end: nav -->
+			
+			<div id="trapez">
+			
+			<img id="trapezist" src="img/trapez.jpg" alt="trapezist"/>
 
-	<div id="performance"> 
-	
-	<h1 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;"><em>Performers</em></span></h1>
-<h2 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e; font-size: small;"><em><span style="text-decoration: underline;"><a href="john.html"> <br>Discover John and his animals here</span></em></span></h2></a> </br>
-<h3 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e; font-size: small;"><em><span style="text-decoration: underline;"><a href="clown.html"> <br>Manu the clown</span></em></span></h3> </a> </br>
-<h4 style="text-align: center;"><em style="color: #9f2b0e; font-family: georgia, palatino; font-size: small;"><span style="text-decoration: underline;"><a href="trapez.html"> <br>Trapezists</span></em></h4> </a> </br>
-
-
-
-
-	
-
-
-</div>
-<img id="perf" src="Images/performances.png" alt="photoperformances"/>
-
-</section>
-
-
+<p style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e; font-size: small;">A number of dual astonishing trapeze, where eight Brazilians, 4 men and 4 women, officiate in an issue of "double trapeze."</span></p>
+<p style="text-align: center;"><span style="font-size: 0.9em;"><span style="font-family: georgia, palatino; color: #9f2b0e;font-size: small;">Artists that rise on two parallel lines where 4 wheeling outfielders, intersect and intertwine ...</span></span></p>
+		<p style="text-align: center;">&nbsp;</p>
+			
+				
 		<footer>
 			&copy; Copyright Wild Circus. All rights reserved.
 		</footer>
 		<!-- Le javascript, Placed at the end of the document so the pages load faster -->
+	
 	</body>
 </html>
