--- a/clown.html
+++ b/clown.html
@@ -17,9 +17,11 @@
 		<link rel="shortcut icon" href="img/fav.ico" />
 		<!-- end: Fav and touch icons -->
 	</head>
-<!-- end: HEAD -->
+	<!-- end: HEAD -->
+	
 	<body>
-	<header>
+	
+		<header>
 		
 		   <img class="banniere2" src="img/banniere2.jpg">
 			<!-- Nav -->
@@ -30,33 +32,23 @@
 				<a id="prices" href="prices.html"></a>
 			</nav>
 		</header>
-		<!-- end: nav -->
-	
-	
-	<section>
-
-	<div id="performance"> 
-	
-	<h1 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;"><em>Performers</em></span></h1>
-<h2 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e; font-size: small;"><em><span style="text-decoration: underline;"><a href="john.html"> <br>Discover John and his animals here</span></em></span></h2></a> </br>
-<h3 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e; font-size: small;"><em><span style="text-decoration: underline;"><a href="clown.html"> <br>Manu the clown</span></em></span></h3> </a> </br>
-<h4 style="text-align: center;"><em style="color: #9f2b0e; font-family: georgia, palatino; font-size: small;"><span style="text-decoration: underline;"><a href="trapez.html"> <br>Trapezists</span></em></h4> </a> </br>
-
-
-
-
-	
-
-
+			<!-- end: nav -->
+			
+			<div id="clown">
+			
+			<img id="theclown" src="img/clown.jpg" alt="clown"/>  
+			
+			
+	 <p style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;font-size: small;">Manu is a French circus man, both clown, also practicing acrobatics, trapeze (area), equestrian exercises, </span></p>
+<p style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;font-size: small;">the taming and music. He plays the trumpet, saxophone and drums.</span></p>
+<p style="text-align: center;">&nbsp;</p>
 </div>
-<img id="perf" src="Images/performances.png" alt="photoperformances"/>
 
-</section>
-
-
+				
 		<footer>
 			&copy; Copyright Wild Circus. All rights reserved.
 		</footer>
 		<!-- Le javascript, Placed at the end of the document so the pages load faster -->
+	
 	</body>
 </html>
