--- a/clown.html
+++ b/clown.html
@@ -38,11 +38,12 @@
 			
 			<img id="theclown" src="img/clown.jpg" alt="clown"/>  
 			
+			<div class="ombretwo">  <h1><strong>Manu's story</h1>
 			
-	 <p style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;font-size: small;">Manu is a French circus man, both clown, also practicing acrobatics, trapeze (area), equestrian exercises, </span></p>
-<p style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;font-size: small;">the taming and music. He plays the trumpet, saxophone and drums.</span></p>
-<p style="text-align: center;">&nbsp;</p>
-</div>
+	 <p>Manu is a French circus man, both clown, also practicing acrobatics, trapeze (area), equestrian exercises, </p>
+<p>the taming and music. He plays the trumpet, saxophone and drums.</p>
+<p style="text-align: center;">&nbsp;</p></strong>
+</div> </div>  
 
 				
 		<footer>
