--- a/john.html
+++ b/john.html
@@ -40,10 +40,16 @@
 			
 			<img id="tiger" src="img/test.jpg" alt="tiger"/>  
 			
+			<div class="ombre">  
 			
-			<p style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;font-size: small;">John has become in recent years one of the best animal trainers of his generation. It currently has a unique number in the world </span></p>
-<p style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;font-size: small;">consisting of twelve tigers and two elephants, where he lies under the beasts! A perilous exercise he performs brilliantly.</span></p>
-<p style="text-align: center;">&nbsp;</p>
+			<h1>Master of animals</h1>
+			
+			<p> John has become in recent years one of the best animal trainers of his generation. It currently has a unique number in the world </p>
+<p> consisting of twelve tigers and two elephants, where he lies under the beasts! A perilous exercise he performs brilliantly.</p>
+<p style="text-align: center;">&nbsp;</p></strong>
+
+</div>  
+			
 </div>
 
 
