--- a/prices.html
+++ b/prices.html
@@ -35,6 +35,9 @@
 		
 		<h1 style="text-align: center;"><span style="font-weight: normal;"><span style="font-family: 'arial black', 'avant garde'; color: #339966;"><span style="text-decoration: underline;">Prices</span>&nbsp;</span></span></h1>
 <p><span style="color: #339966;"><br /></span></p>
+
+<img id="ticket" src="img/ticket.png" alt="ticket"/> 
+
 <p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Children under 8 : Free&nbsp;</span></p>
 <p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Entrance for adult : 12 &euro;</span></p>
 <p style="text-align: center;"><span style="font-family: 'courier new', courier; color: #339966; font-size: small;">Teenagers from 8 to 13 &nbsp;: 7 &euro;</span></p>
