--- a/trapez.html
+++ b/trapez.html
@@ -37,13 +37,22 @@
 			<div id="trapez">
 			
 			<img id="trapezist" src="img/trapez.jpg" alt="trapezist"/>
-
-<p style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e; font-size: small;">A number of dual astonishing trapeze, where eight Brazilians, 4 men and 4 women, officiate in an issue of "double trapeze."</span></p>
-<p style="text-align: center;"><span style="font-size: 0.9em;"><span style="font-family: georgia, palatino; color: #9f2b0e;font-size: small;">Artists that rise on two parallel lines where 4 wheeling outfielders, intersect and intertwine ...</span></span></p>
-		<p style="text-align: center;">&nbsp;</p>
 			
-				
-		<footer>
+			<div class="ombrethree">  
+			
+			<h1><strong> Numb of trapezists</h1></strong>
+
+<p>A number of dual astonishing trapeze, where eight Brazilians, 4 men and 4 women, officiate in an issue of "double trapeze."
+Artists that rise on two parallel lines where 4 wheeling outfielders, intersect and intertwine</p>
+		
+		<p style="text-align: center;">&nbsp;</p></strong>
+		
+		</div>
+		
+		</div>
+		
+			
+				<footer>
 			&copy; Copyright Wild Circus. All rights reserved.
 		</footer>
 		<!-- Le javascript, Placed at the end of the document so the pages load faster -->
