--- a/performances.html
+++ b/performances.html
@@ -37,7 +37,7 @@
 
 	<div id="performance"> 
 	
-	<h1 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e;"><em>Performers</em></span></h1>
+	<div class="perform"> <h1>Performers</h1></div>
 <h2 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e; font-size: small;"><em><span style="text-decoration: underline;"><a href="john.html"> <br>Discover John and his animals here</span></em></span></h2></a> </br>
 <h3 style="text-align: center;"><span style="font-family: georgia, palatino; color: #9f2b0e; font-size: small;"><em><span style="text-decoration: underline;"><a href="clown.html"> <br>Manu the clown</span></em></span></h3> </a> </br>
 <h4 style="text-align: center;"><em style="color: #9f2b0e; font-family: georgia, palatino; font-size: small;"><span style="text-decoration: underline;"><a href="trapez.html"> <br>Trapezists</span></em></h4> </a> </br>
@@ -49,7 +49,7 @@
 
 
 </div>
-<img id="perf" src="Images/performances.png" alt="photoperformances"/>
+
 
 </section>
 
